--- a/app/views/visitors/index.html.slim
+++ b/app/views/visitors/index.html.slim
@@ -62,7 +62,8 @@ sass:
         text-decoration: underline
 
   table.seminars
-    padding-top: 50px
+    padding-top: 10px
+    width: 100%
     td
       padding: 3px 3px 10px
       vertical-align: top
@@ -73,7 +74,7 @@ sass:
         width: 280px
 
       a
-        color: cornflowerblue
+        color: #015ba7
         text-decoration: none
         &:hover
           text-decoration: underline
