--- a/app/views/bookings/new.html.slim
+++ b/app/views/bookings/new.html.slim
@@ -1,19 +1,27 @@
 - page_title_for @booking
-.page-header
-  h2
-    => icon_for @seminar, text: "#{@seminar.number} - #{@seminar.title}"
-    br
-    small = @seminar.subtitle
+
+h4 Ich melde mich verbindlich für folgende Veranstaltung an:
 
 .row
-  .col-md-4
-    label = Seminar.human_attribute_name(:benefit)
-    p = @seminar.benefit&.html_safe
-  .col-md-4
-    label = Seminar.human_attribute_name(:content)
-    p = @seminar.content&.html_safe
-  .col-md-4
-    label = Seminar.human_attribute_name(:notes)
-    p = @seminar.notes&.html_safe
+  .col-md-2: label Seminarnr.
+  .col-md-6: strong = @seminar.number
+.row
+  .col-md-2: label Titel
+  .col-md-6 = @seminar.title
+.row
+  .col-md-2
+  .col-md-6 = @seminar.subtitle
+.row
+  .col-md-2: label Datum
+  .col-md-6 = @seminar.dates.map { |date| ldate date }.join('; ').html_safe
+.row
+  .col-md-2: label Zeit
+  .col-md-6 = @seminar.events.map(&:time).uniq.compact.join('; ').html_safe
+.row
+  .col-md-2: label Ort
+  .col-md-6 = @seminar.location&.name
+.row
+  .col-md-2: label Gebühr
+  .col-md-6 = @seminar.price_text.html_safe
 
 = render 'form'
