1st step external layout in bootstrap

--- a/app/assets/stylesheets/1st_load_framework.css.sass
+++ b/app/assets/stylesheets/1st_load_framework.css.sass
@@ -32,7 +32,7 @@ img
 // apply styles to HTML elements
 // to make views framework-neutral
 main
-  @extend .container-fluid
+  //@extend .container-fluid
   //background-color: #eee;
   padding-bottom: 80px
   //width: 100%;
