more rows for big content fields

--- a/app/views/seminars/_form.html.slim
+++ b/app/views/seminars/_form.html.slim
@@ -96,3 +96,7 @@ sass:
         width: 10%
       &.location
         width: 30%
+
+  #content, #benefit, #notes
+    iframe.wysihtml5-sandbox
+      height: 500px !important
