--- a/app/views/layouts/old_site/_navigation.html.slim
+++ b/app/views/layouts/old_site/_navigation.html.slim
@@ -41,7 +41,7 @@ sass:
           color: #0067aa
           text-decoration: none
           background-color: #fac052
-          background-image: url(menu3.gif)
+          background-image: url(/old_site/menu3.gif)
           background-repeat: repeat-x
 
     .linki2
@@ -67,5 +67,5 @@ sass:
           color: #0067aa
           text-decoration: none
           background-color: #fac052
-          background-image: url(menu3.gif)
+          background-image: url(/old_site/menu3.gif)
           background-repeat: repeat-x
