--- a/app/views/seminars/show.html.slim
+++ b/app/views/seminars/show.html.slim
@@ -1,4 +1,5 @@
 - page_title_for @seminar, :number
+- module_parent = @seminar.parent
 
 ol.breadcrumb
   li = link_to Seminar.model_name.human(count: 2), seminars_url
@@ -8,21 +9,37 @@ ol.breadcrumb
     li = link_to parent.name, seminars_url(category_id: parent.id)
     - unless parent == sub_cat
       li = link_to sub_cat.name, seminars_url(category_id: sub_cat.id)
+  - if (module_parent)
+    li = link_to module_parent.number, module_parent
 
 .page-header
   .buttons
     => edit_link edit_seminar_url(@seminar)
     = copy_link new_seminar_url(copy_from: @seminar.id)
   h2
-    => icon_for @seminar, text: "#{@seminar.number} - #{@seminar.title}"
+    - if module_parent
+      => link_to icon_for(module_parent, text: "#{module_parent.number} - #{module_parent.title}"), module_parent
+      br
+      => "Modul: #{@seminar.number} - #{@seminar.title}"
+    - else
+      => icon_for @seminar, text: "#{@seminar.number} - #{@seminar.title}"
     br
     small = @seminar.subtitle
 
 .row
-  .col-md-8
+  .col-md-6
     = render 'seminars/show/bookings'
     = render 'seminars/show/attendees'
-  .col-md-4
+  .col-md-6
+    - if @seminar.sub_modules.any?
+      = panel_box_with_table title: 'Module' do
+        table.standard-table
+          - @seminar.sub_modules.order(:number).each do |sub_module|
+            tr
+              td = link_to sub_module.number, sub_module
+              td = sub_module.teachers.map(&:name).join(', ').html_safe
+              td = sub_module.dates.map { |date| ldate date }.join('<br>').html_safe
+              td = sub_module.price
     = render 'seminars/show/teachers'
     p
       - location = @seminar.location
@@ -31,9 +48,9 @@ ol.breadcrumb
     = render 'seminars/show/events'
     = render 'seminars/show/categories'
 
-    = panel_box title: Seminar.human_attribute_name(:price), toggle: true do
-      p = number_to_currency @seminar.price
-      = @seminar.price_text&.html_safe
+    p: label Preis
+    p = number_to_currency @seminar.price
+    p = @seminar.price_text&.html_safe
     = panel_box title: Seminar.human_attribute_name(:benefit), toggle: true do
       = @seminar.benefit&.html_safe
     = panel_box title: Seminar.human_attribute_name(:content), toggle: true do
