change fax number

--- a/app/views/layouts/old_site.html.slim
+++ b/app/views/layouts/old_site.html.slim
@@ -69,9 +69,9 @@ html lang="de" xmlns="http://www.w3.org/1999/xhtml"
               br
               | 39112 Magdeburg
               br
-              | Tel.: (0391) 6293313
+              | Tel.: (0391) 62 93 313
               br
-              | Fax: (0391) 6293555
+              | Fax: (0391) 62 93 596 313
               br
               | bildungswerk@paritaet-lsa.de
 
