added missing fields for booking form and no company booking anymore

--- a/app/views/bookings/new.html.slim
+++ b/app/views/bookings/new.html.slim
@@ -1,27 +1,29 @@
 - page_title_for @booking
 
-h4 Ich melde mich verbindlich für folgende Veranstaltung an:
+- unless user_signed_in?
 
-.row
-  .col-md-2: label Seminarnr.
-  .col-md-6: strong = @seminar.number
-.row
-  .col-md-2: label Titel
-  .col-md-6 = @seminar.title
-.row
-  .col-md-2
-  .col-md-6 = @seminar.subtitle
-.row
-  .col-md-2: label Datum
-  .col-md-6 = @seminar.dates.map { |date| ldate date }.join('; ').html_safe
-.row
-  .col-md-2: label Zeit
-  .col-md-6 = @seminar.events.map(&:time).uniq.compact.join('; ').html_safe
-.row
-  .col-md-2: label Ort
-  .col-md-6 = @seminar.location&.name
-.row
-  .col-md-2: label Gebühr
-  .col-md-6 = @seminar.price_text.html_safe
+  h3 Ich melde mich verbindlich für folgende Veranstaltung an:
+
+  .row
+    .col-md-2: label Seminarnr.
+    .col-md-6: strong = @seminar.number
+  .row
+    .col-md-2: label Titel
+    .col-md-6 = @seminar.title
+  .row
+    .col-md-2
+    .col-md-6 = @seminar.subtitle
+  .row
+    .col-md-2: label Datum
+    .col-md-6 = @seminar.dates.map { |date| ldate date }.join('; ').html_safe
+  .row
+    .col-md-2: label Zeit
+    .col-md-6 = @seminar.events.map(&:time).uniq.compact.join('; ').html_safe
+  .row
+    .col-md-2: label Ort
+    .col-md-6 = @seminar.location&.name
+  .row
+    .col-md-2: label Gebühr
+    .col-md-6 = @seminar.price_text.html_safe
 
 = render 'form'
