--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -1,4 +1,5 @@
 = simple_form_for(@booking) do |f|
+  = f.input :seminar_id, as: :hidden
   /= f.error_notification
   - if @booking.errors.any?
     .alert.alert-danger.alert-dismissable
@@ -7,32 +8,87 @@
         span.sr-only Close
       h4 = t('.error')
 
-  = f.input :company, as: :hidden
+  .row style="padding-top: 30px"
+    .col-md-8
+      fieldset
+        legend Teilnehmer
 
-  - if @booking.new_record?
-    = f.input :seminar_id, as: :hidden
-    section
-      .col-md-6
-        .form-group
-          .btn-group
-            = link_to 'Privatperson', new_booking_path(seminar_id: @booking.seminar_id, company: false),
-                class: "btn btn-default #{'active' unless @booking.company}",
-                data: { turbolinks_action: 'replace' }
-            = link_to 'Firma', new_booking_path(seminar_id: @booking.seminar_id, company: true),
-                class: "btn btn-default #{'active' if @booking.company}",
-                data: { turbolinks_action: 'replace' }
-  - else
-    h3 = t("bookings.company_#{@booking.company}")
+        = f.simple_fields_for :attendees do |attendee_form|
+          - attendee = attendee_form.object
+          .attendee class=('new-record' if attendee.new_record?)
+            = attendee_form.input :_destroy, as: :hidden, input_html: { value: attendee.new_record? }
+            .row
+              .col-md-6 = attendee_form.input :first_name, label: false
+              .col-md-6 = attendee_form.input :last_name,  label: false
 
-  - if @booking.company
-    = render 'form_company', f: f
-  - else
-    = f.simple_fields_for :attendees do |attendee_form|
-      label = Attendee.model_name.human
-      = render 'form_attendee', attendee_form: attendee_form
+        .row
+          .col-md-1 = link_to fa_icon('plus', text: 'Teilnehmer hinzufügen'), '#',
+            class: 'add-attendee btn btn-default', tabindex: -1, title: 'Neuer Teilnehmer'
+
+      fieldset
+        legend Kontakt
+        .row = f.simple_fields_for :contact, f.object.contact do |c|
+          .col-md-6 = c.input :email,  as: :email, required: true, label: false
+          .col-md-6 = c.input :phone,  as: :tel, required: true, label: false
+          .col-md-6 = c.input :fax,    as: :tel, required: false, label: false
+          .col-md-6 = c.input :mobile, as: :tel, required: false, label: false
+
+      fieldset
+        legend Rechnungsadresse
+        .row = f.simple_fields_for :contact, f.object.contact do |c|
+          .col-md-6 = c.input :person, required: true, label: false
+        .row = f.simple_fields_for :address, f.object.address do |c|
+          .col-md-5 = c.input :street, required: true, label: false
+          .col-md-2 = c.input :zip,  as: :tel, required: true, label: false
+          .col-md-5 = c.input :city, required: true, label: false
+
+      fieldset
+        legend Paritätische
+        .row
+          .col-md-6 = f.input :member, as: :boolean, label: 'Mitglied im PARITÄTISCHEN LSA'
+          .col-md-6 = f.input :member_institution, as: :boolean, label: 'Einrichtung des PARITÄTISCHEN LSA'
+        .row
+          .col-md-4 = f.input :graduate, as: :boolean, label: 'Absolvent*in der Fachschule'
+          .col-md-4 = f.input :school, collection: %w(Aschersleben Drübeck), prompt: 'Schule', label: false
+          .col-md-4 = f.input :year, as: :integer, placeholder: 'Jahr', label: false
+
+      fieldset
+        legend AGB
+        = f.input :terms_of_service, as: :boolean, label: 'Hiermit erkenne ich die Allgemeinen Geschäftsbedingungen des PARITÄTISCHEN Bildungswerkes LSA an.'
 
   .row.action-buttons
     .col-md-8
       .pull-right
-        => link_to t(:cancel), 'javascript: window.history.back();', class: 'btn btn-default'
-        = f.submit t(:save), class: 'btn btn-primary'
+        - if user_signed_in?
+          => link_to t(:cancel), 'javascript: window.history.back();', class: 'btn btn-default'
+          = f.submit t(:save), class: 'btn btn-primary'
+        - else
+          = f.submit 'Jetzt anmelden', class: 'btn btn-primary'
+
+
+coffee:
+  $ ->
+    toggleAttendee = (attendee, hidden) ->
+      attendee.toggleClass('hidden', hidden)
+      attendee.find('.booking_attendees__destroy input').val(hidden)
+
+    $('.attendee.new-record').addClass('hidden')
+    $('.add-attendee').on 'click', (event) ->
+      event.preventDefault()
+      toggleAttendee $('.attendee.new-record.hidden').first(), false
+    $('.remove-attendee').on 'click', (event) ->
+      event.preventDefault()
+      toggleAttendee $(this).parents('.attendee'), true
+    if $('form.new_booking').length
+      toggleAttendee $('.attendee.new-record.hidden').first(), false
+
+    $('#booking_graduate').change ->
+      disabled = !$('#booking_graduate:checked').val()
+      $('#booking_school, #booking_year').attr('disabled', disabled)
+
+    $('#booking_graduate').change()
+
+
+sass:
+  a.add-attendee
+    margin-bottom: 25px
