use now simple 'external' layout based on application layout

--- a/app/views/layouts/old_site/_foot.html.slim
+++ b/app/views/layouts/old_site/_foot.html.slim
@@ -1,3 +1,4 @@
+
 .foot
   a> href="http://bildungswerk-lsa.de/index.php?article_id=50"  Karriere
   | |
@@ -18,11 +19,11 @@ sass:
     background-color: #eeeeee
     clear: both
     text-align: right
-    font-size: 0.8em
+    /*font-size: 0.8em*/
     color: #9e9e9e
     padding-right: 12px
     padding-bottom: 3px
-    margin-top: -50x
+    margin-top: 50px
     a
       color: #9e9e9e
       &:link, &:visited
