use contact and address prefix on location and teacher index page

--- a/app/views/locations/index.html.slim
+++ b/app/views/locations/index.html.slim
@@ -14,5 +14,5 @@
       - @locations.each do | location |
         tr data = {url: url_for(location)}
           td = location.name
-          td = location.city
+          td = location.address_city
           td = location.seminars.count
