--- a/app/views/teachers/index.html.slim
+++ b/app/views/teachers/index.html.slim
@@ -15,7 +15,7 @@
           td = teacher.title
           td = teacher.first_name
           td = teacher.last_name
-          td = teacher.city
-          td = teacher.email
-          td = teacher.mobile
+          td = teacher.address_city
+          td = teacher.contact_email
+          td = teacher.contact_mobile
           td = teacher.seminars.count
